# AlgorithmsAndDataStructuresInC

./: CMakeLists.txt  README.md
Base/: CMakeLists.txt
Base/app/: main.c
Base/src/: CMakeLists.txt
BasicStructure/app/: CMakeLists.txt  main.c
Chapter10_Bubble_Sort/: CMakeLists.txt
Chapter10_Bubble_Sort/app/: main.c
Chapter10_Bubble_Sort/include/: my_lib.h
Chapter10_Merge_Sort/: CMakeLists.txt
Chapter10_Merge_Sort/app/: main.c
Chapter10_Quick_Sort/: CMakeLists.txt
Chapter10_Quick_Sort/app/: main.c
Chapter10_Quick_Sort/src/: my_lib.c
Chapter11_Array_In_Data_Structure/: CMakeLists.txt
Chapter11_Array_In_Data_Structure/app/: main.c
Chapter11_Array_In_Data_Structure/include/: ArrInDataStruct.h
Chapter11_Array_In_Data_Structure/src/: ArrInDataStruct.c  CMakeLists.txt
Chapter12_0_Circular_LinkedList/: CMakeLists.txt
Chapter12_0_Circular_LinkedList/app/: main.c
Chapter12_0_Circular_LinkedList/include/: CLinkedList.h
Chapter12_0_Circular_LinkedList/src/: CLinkedList.c  CMakeLists.txt
Chapter1_Intro/: CMakeLists.txt
Chapter1_Intro/app/: main.c
Chapter1_Intro/include/: my_lib.h
Chapter1_Intro/src/: my_lib.c
Chapter2_Basics/: CMakeLists.txt
Chapter2_Basics/app/: main.c
Chapter3_0_Stack/: CMakeLists.txt
Chapter3_0_Stack/app/: main.c
Chapter3_0_Stack/include/: stack.h
Chapter3_0_Stack/src/: stack.c
Chapter3_1_Stack/: CMakeLists.txt
Chapter3_1_Stack/app/: main.c
Chapter3_1_Stack/include/: stack.h
Chapter3_1_Stack/src/: stack.c
Chapter3_2_Stack/: CMakeLists.txt
Chapter3_2_Stack/app/: main.c
Chapter3_2_Stack/include/: stack.h
Chapter3_Stack/: CMakeLists.txt
Chapter3_Stack/app/: main.c
Chapter3_Stack/include/: stack.h
Chapter3_Stack/src/: CMakeLists.txt  stack.c
Chapter4_0_Queue/: CMakeLists.txt
Chapter4_0_Queue/app/: main.c
Chapter4_0_Queue/src/: CMakeLists.txt
Chapter4_1_Queue/: CMakeLists.txt
Chapter4_1_Queue/app/: main.c
Chapter4_1_Queue/src/: queue.c
Chapter4_2_Queue/: CMakeLists.txt
Chapter4_2_Queue/app/: main.c
Chapter4_2_Queue/include/: queue.h
Chapter4_Queue/: CMakeLists.txt
Chapter4_Queue/app/: main.c
Chapter4_Queue/include/: queue.h
Chapter5_0_LinkedList/: CMakeLists.txt
Chapter5_0_LinkedList/app/: main.c
Chapter5_0_LinkedList/include/: LinkedList.h
Chapter5_0_LinkedList/src/: LinkedList.c
Chapter5_1_DLinkedList/: CMakeLists.txt
Chapter5_1_DLinkedList/app/: main.c
Chapter5_1_DLinkedList/include/: DLinkedList.h
Chapter5_1_DLinkedList/src/: CMakeLists.txt  DLinkedList.c
Chapter5_1_LinkedList/app/: main.c
Chapter5_2_LinkedList/: CMakeLists.txt
Chapter5_2_LinkedList/app/: main.c
Chapter5_2_LinkedList/src/: CMakeLists.txt
Chapter6_0_DLinkedList/: CMakeLists.txt
Chapter6_0_DLinkedList/app/: main.c
Chapter6_0_DLinkedList/src/: DLinkedList.c
Chapter6_0_Hash_Table/: CMakeLists.txt
Chapter6_0_Hash_Table/app/: main.c
Chapter6_0_Hash_Table/include/: HashTable.h
Chapter6_1_DLinkedList/: CMakeLists.txt
Chapter7_0_BinarySearchTree/: CMakeLists.txt
Chapter7_1_BinarySearchTree/: CMakeLists.txt
Chapter8_Min_Max_Heap/: CMakeLists.txt
Chapter8_Min_Max_Heap/src/: CMakeLists.txt  Heap.c
Chapter9_0_Graph/: CMakeLists.txt
Chapter9_1_Graph/: CMakeLists.txt
Chapter9_1_Graph/app/: main.c
Chapter9_Graph/: CMakeLists.txt
(+22 files in other folders)
