cmake_minimum_required(VERSION 3.14)

project(AdvancedCProgrammingCourse VERSION 1.0.0 LANGUAGES C)

# add_subdirectory("BasicStructure")

# add_subdirectory("Chapter1_Intro")

# add_subdirectory("Chapter2_Basics")

# add_subdirectory("Chapter3_0_Stack")

# dd_subdirectory("Chapter3_1_Stack")

# add_subdirectory("Chapter4_0_Queue")

# add_subdirectory("Chapter4_1_Queue")

add_subdirectory("Chapter5_1_DLinkedList")

# add_subdirectory("")

# add_subdirectory("")

# add_subdirectory("")

# add_subdirectory("")
