cmake_minimum_required(VERSION 3.14)

project(AdvancedCProgrammingCourse VERSION 1.0.0 LANGUAGES C)

## add_subdirectory("Base")

# add_subdirectory("Chapter1_Intro")

# add_subdirectory("Chapter2_Basics")

# add_subdirectory("Chapter3_0_Stack")

# add_subdirectory("Chapter3_1_Stack")

# add_subdirectory("Chapter4_0_Queue")

# add_subdirectory("Chapter4_1_Queue")

# add_subdirectory("Chapter5_0_LinkedList")

# add_subdirectory("Chapter5_1_LinkedList")

add_subdirectory("Chapter6_0_DLinkedList")

# add_subdirectory("Chapter6_1_DLinkedList")

# add_subdirectory("Chapter7_0_BinarySearchTree")

# add_subdirectory("Chapter8_Min_Max_Heap")

# add_subdirectory("Chapter9_Graph")

# add_subdirectory("Chapter10_Bubble_Sort")

# add_subdirectory("Chapter10_Merge_Sort")

# add_subdirectory("Chapter10_Quick_Sort")

# add_subdirectory("Chapter11_Array_In_Data_Structure")

# add_subdirectory("")

# add_subdirectory("")

# add_subdirectory("")

# add_subdirectory("")

# add_subdirectory("")

# add_subdirectory("")

# add_subdirectory("")

# add_subdirectory("")

# add_subdirectory("")

# add_subdirectory("")

# add_subdirectory("")

# add_subdirectory("")

# add_subdirectory("")

# add_subdirectory("")